@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

class FilterDateCommand {
    - startDate : LocalDate
    - endDate : LocalDate
    - sortOrder : String

    - sortFilterDate() : Comparator<Person>
    + execute(model : Model) : CommandResult
}

class FilterDateCommandParser {
    - MAX_YEARS_RANGE : int = 5

    + parse(args : String) : FilterDateCommand
}

class "<<interface>>\nParser" as Parser {
    + parse(userInput : String) : T
}

abstract class "{abstract}\nCommand" as Command {
    + execute(model : Model) : CommandResult
}

class "<<interface>>\nModel" as Model {
    + getRenewalsList() : ObservableList<Person>
    + updateRenewalsList(predicate : Predicate<Person>) : void
    + updateSortedRenewalsList(comparator : Comparator<Person>) : void
}

class MainWindow {
    - logic : Logic
    - filterLabel : Label

    - executeCommand(commandText : String) : CommandResult
    - updateFilterLabelEmpty() : void
    + updateFilterLabel(startDate : LocalDate, endDate : LocalDate) : void
}

class "<<interface>>\nLogic" as Logic {
    + execute(commandText : String) : CommandResult
}

class LogicManager {
    - addressBookParser : AddressBookParser

    + execute(commandText : String) : CommandResult
}

class AddressBookParser {
     + parseCommand(userInput : String) : Command
}

FilterDateCommandParser -up-|> Parser
FilterDateCommand -up-|> Command
FilterDateCommandParser ..> FilterDateCommand
FilterDateCommand ..> Model
MainWindow -up-|> UiPart
LogicManager -up-|> Logic
MainWindow --> LogicManager
LogicManager --> AddressBookParser
AddressBookParser ..> FilterDateCommandParser

@enduml
